# sigma-cast-DL

./: .buildinfo  .gitignore  1_eda_volatility_final.html  1_eda_volatility_final.ipynb  2_features_engineering.html  2_features_engineering.ipynb  3_model_training.html  3_model_training.ipynb  4_model_evaluation.html  4_model_evaluation.ipynb  LICENSE  README.md  _config.yml  _toc.yml  genindex.html  intro.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: 1_eda_volatility_final.doctree  2_features_engineering.doctree  3_model_training.doctree  4_model_evaluation.doctree  environment.pickle  intro.doctree
_build/jupyter_execute/: 1_eda_volatility_final.ipynb  2_features_engineering.ipynb  3_model_training.ipynb  4_model_evaluation.ipynb
_sources/: intro.md
_static/: custom.css
volatility-api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
volatility-api/.github/workflows/: ci.yml
volatility-api/app/: __init__.py  baselines.py  config.py  main.py  model.py  monitoring.py  schemas.py
volatility-api/scripts/: compute_baselines.py  compute_training_stats.py
volatility-api/static/: index.html  scalar-theme.css
volatility-api/tests/: conftest.py  test_api.py  test_baselines.py  test_model.py  test_monitoring.py
